--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 {
     display: block;
     height: auto;
-    border: 1px solid transparent;
+    border: none;
 }
 .slick-arrow.slick-hidden {
     display: none;
@@ -163,6 +163,8 @@
 }
 
 </style>
+
+
 </head>
 
 <body>
@@ -358,13 +360,13 @@
 			<div class="container" style="background-color:black; ">
 	 
 				<section class="customer-logos slider">
-					 <a href="https://gpr247.com/"> <div class="slide"><img src="./images/gpr000.png"></div></a>
-					 <a href="https://diamond333.club/login"><div class="slide"><img src="./images/diamond000.png"></div></a>
-					 <a href="https://runner777.com/"><div class="slide"><img src="./images/runner000.png"></div></a>
-					 <a href="https://winzo247.com/#/home"> <div class="slide"><img src="./images/winzo000.png"></div></a>
-					 <a href="https://tenxbet.com/login"><div class="slide"><img src="./images/tenx000.png"></div></a>
-					 <a href="https://www.radheexch.com/"><div class="slide"><img src="./images/radhe000.png"></div></a>
-					 <a href="https://matrixexch9.com/login"> <div class="slide"><img src="./images/matrix000.png"></div></a>
+					 <a href="./gpr247.html"> <div class="slide"><img src="./images/gpr000.png"></div></a>
+					 <a href="./diamond.html"><div class="slide"><img src="./images/diamond000.png"></div></a>
+					 <a href="./runner777.html"><div class="slide"><img src="./images/runner000.png"></div></a>
+					 <a href="./winzo.html"> <div class="slide"><img src="./images/winzo000.png"></div></a>
+					 <a href="./tenx.html"><div class="slide"><img src="./images/tenx000.png"></div></a>
+					 <a href="./radhe.html"><div class="slide"><img src="./images/radhe000.png"></div></a>
+					 <a href="./matrix.html"> <div class="slide"><img src="./images/matrix000.png"></div></a>
 				</section>
 			 </div>
 			
