--- a/winzo.html
+++ b/winzo.html
@@ -10,7 +10,7 @@
 		content="Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
 	<!-- <meta name="keywords" content="Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/fav.png">
-	<title>Baazigar Book - Runner</title>
+	<title>Baazigar Book - Winzo</title>
 	<link rel="stylesheet" type="text/css" href="css/owl.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" />
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-
 	<!-- #######TEST########### -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
@@ -81,10 +80,10 @@
 
 	<div class="md_insta" style="text-align: center;">
 		<div class="main" style="text-align: center">
-			<h2><img src="images/runner.png" alt="Baazigar Book" width="272px"></h2>
+			<h2><img src="./images/winzo000.png" alt="Baazigar Book" width="272px"></h2>
 			<div class="md_insta_dv" style="text-align: center; width: 100%;">
-				<h3 style="text-align: center; width: 100%">SITE : <a href="https://runner777.com/"
-						target="_blank">www.runner777.com</a><br /><br />
+				<h3 style="text-align: center; width: 100%">SITE : <a href="https://winzo247.com/"
+						target="_blank">www.winzo247.com</a><br /><br />
 					DEMO ID<br /><br />
 					User ID = demo111devi<br />
 					Pass = Abcd1212<br /><br />
@@ -131,7 +130,7 @@
 			<div class="md_ftr_blk">
 				<div class="md_ftr_logo">
 					<a href="index.html">
-						<img class="tplogo" src="images/runner.png" alt="Baazigar Book" />
+						<img class="tplogo" src="./images/winzo000.png" alt="Baazigar Book" />
 						<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 					</a>
 				</div>
