--- a/diamond.html
+++ b/diamond.html
@@ -34,7 +34,17 @@
 </script>
 </head>
 
+
 <body>
+
+	<!-- #######TEST########### -->
+	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+
+
 	    <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNTNM2N"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -92,19 +102,28 @@
 
 <div class="md_sites" id="websites">
 	<div class="main">
-		<h2 style="text-align: center">Available Sites</h2>
-		<div class="md_sites_logo">
-			<a href="./tenx.html"><img class="s1" alt="" src="images/logo.png">
-			</a>
-			<a href="./runner777.html"><img class="s3" alt="" src="images/runner.png">
-			</a>
-			<a href="./gpr247.html"><img class="s4" alt="" src="images/gpr.png">
-			</a>
-			<a href="./index.html"><img class="s6" alt="" src="./images/secondlogo.PNG">
-			</a>
-			<a href="./diamond.html"><img style="position: absolute;" class="s5" alt="" src="images/diamond.png">
-			</a>
-		</div>
+		<div class="md_banner_inn">
+			<div class="md_banner_con">
+			
+				</div>
+				</div><div class="md_banner_inn">
+				<div class="md_banner_con">
+				
+					</div>
+					</div>
+		
+		<div id="navuslider" class="container" style="background-color:black; position: relative; z-index: 9999; ">
+	 
+			<section class="customer-logos slider">
+				<a href="./gpr247.html"> <div class="slide"><img src="./images/gpr000.png"></div></a>
+				<a href="./diamond.html"><div class="slide"><img src="./images/diamond000.png"></div></a>
+				<a href="./runner777.html"><div class="slide"><img src="./images/runner000.png"></div></a>
+				<a href="./winzo.html"> <div class="slide"><img src="./images/winzo000.png"></div></a>
+				<a href="./tenx.html"><div class="slide"><img src="./images/tenx000.png"></div></a>
+				<a href="./radhe.html"><div class="slide"><img src="./images/radhe000.png"></div></a>
+				<a href="./matrix.html"> <div class="slide"><img src="./images/matrix000.png"></div></a>
+		   </section>
+		 </div>
 	</div>
 </div>
 	<hr style="opacity: .3">
