--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<!--<h2>Available Sites</h2>-->
 				<div class="md_banner_inn">
 				<div class="md_banner_con">
-					<h1>Available Sites</h1>
+					<h1>Demo Id</h1>
 					</div>
 					</div>
 			<!-- <div class="md_sites_logo">
