--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 
 <!-- Mirrored from www.BaazigarBook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 04:54:45 GMT -->
 <head>
+	<!-- ###################### -->
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RRE6BQ7RKG"></script>
+
+  
+    <meta name="description" content="Baazigar Book  is the best Online Betting id provider in India .  Best Online Cricket Id platform, Earn money and start playing now with us. ">
+
+    <meta name="keywords" content="online cricket id ,Online betting id, Best betting site in India,Cricket betting id,Baazigar Book,Trusted Online betting id">
+
+  
+  
+
+  
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+
+
+
+  
+
+  <link rel="stylesheet" href="css/my.css">
+
+  
+
+ 
+
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<!-- ####################################### -->
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<meta name="description"
@@ -891,9 +921,243 @@
 		</div>
 
 	</div>
+	<div class="" id="contactusid" style="background-color: #272727;">
+		<div class="container-fluid pt-5 ">
+		  <div class="row">
+	
+			<div class="col-6 col-sm-6 col-md-3 pl-5 pb-4 align-items-center text-center">
+			  <img class="text-center footerlogo4"  src="/images/secondlogo.PNG" alt="Baazigar Book">
+				<p class="fffc" style="font-size: 11px; color: white;">
+				  © Established in 2005, Baazigar Book is the most trusted betting exchange and leading online casino.
+				</p>
+	
+			</div>
+			<div class="col-6 col-sm-6 col-md-3">
+			  <div class="">
+				<ul style="list-style: none; font-size: 13px;">
+				  <p class="text-white ffft">Company</p>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Responsible Gaming</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Getting Started</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Online Betting</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Cricket Betting</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Golf Betting</li>
+				  </a>
+				</ul>
+			  </div>
+	
+			</div>
+	
+			<div class="col-6 col-sm-6 col-md-3">
+			  <div class="">
+				<ul style="list-style: none; font-size: 13px;">
+				  <p class="text-white ffft">RESOURCES</p>
+				  <a style="color: white; text-decoration: none" href="index.html#">
+					<li class="fffc">Blogs</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">AppaBook</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Terms & Conditions</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Privacy & Security</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Online Casino</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Betting Sites</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Betting App</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID">
+					<li class="fffc">Andar Bahar</li>
+				  </a>
+				</ul>
+			  </div>
+	
+			</div>
+	
+	
+			<div class="col-6 col-sm-6 col-md-3">
+			  <div class="">
+				<ul style="list-style: none; font-size: 13px;">
+				  <p class="text-white ffft">Online ID</p>
+				  <a style="color: white; text-decoration: none" href="http://www.appabook.com/appabook9.html">
+					<li class="fffc">AppaBook</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="http://www.appabook.com/sky.html">
+					<li class="fffc">Sky Exch</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="http://www.appabook.com/lotus.html">
+					<li class="fffc">Lotus Exch</li>
+				  </a>
+				  <a style="color: white; text-decoration: none" href="http://www.appabook.com/diamond.html">
+					<li class="fffc">Diamond Exch</li>
+				  </a>
+				</ul>
+			  </div>
+	
+			</div>
+		  </div>
+		  <!--Disclaimer start-->
+		  <div class="container line">
+			<div class="row pt-3">
+			  <div class="col-sm">
+				<div class="pt-2 pb-3">
+				  <img src="images/fotterimg/download.jpg" alt="gaming curcao" style="width: 90%;">
+				</div>
+			  </div>
+			  <div class="col-sm-10">
+				<div>
+				  <p class="text-white mer fffc"> Disclaimer : <br> Please note that Gambling involves a financial risk and
+					could be addictive over time if not practised within limits. Only 18+ people should use the services and
+					should use it responsibly. Players should be aware of any financial risk and govern themselves
+					accordingly.
+				  </p>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  <!--Disclaimer end-->
+		  <div class="container ap pt-3 pb-3">
+			<p class="text-white fffc">© 2022 Baazigar Book. All Rights Reserved</p>
+		  </div>
+		</div>
+	  </div>
+	
+	  <!-- <a href="https://wa.me/918800000096?text=Hello I need to know more about the new ID" style="color: white; text-decoration: none" class="float" target="_blank">
+		<p class="text-center"><i class="fa fa-whatsapp my-float" style="font-size: 45px;"></i></p>
+	  </a> -->
+	  <section style="background-color: #111;">
+		<div class="container" style="background-color: #111;">
+		  <div class="bwFooter__sponsorLogos css-84p6h6">
+			<p class="bwFooter__sponsorTitle css-1lxgyys">Official Partner of</p><a class="bwFooter__sponsor css-1baulvz" href="index.html#" rel="nofollow noopener noreferrer" target="_blank"><img src="images/fotterimg/98e755f6d0d6f4921d1502c76c19160ecfafe819-min.png" alt="West Indies" class="css-71x25p"></a><a class="bwFooter__sponsor css-1baulvz" href="index.html" rel="nofollow noopener noreferrer" target="_blank"><img src="images/fotterimg/68155b8e255d860a9f8e440a12facdbee56b4ccd-min.png" alt="West Ham" class="css-71x25p"></a><a class="bwFooter__sponsor css-1baulvz" href="index.html#" rel="nofollow noopener noreferrer" target="_blank"><img src="images/fotterimg/fb70c56629529733ff5564e05896f5aba3ae4282-min.png" alt="Surrey County Cricket Club" class="css-71x25p"></a><a class="bwFooter__sponsor css-1baulvz" href="index.html#" rel="nofollow noopener noreferrer" target="_blank"><img src="images/fotterimg/87c66747d38df376d78c8c1d77e0d95450d47bab.webp" alt="Kevin Pietersen" class="css-71x25p"></a>
+		  </div>
+	
+		  <hr class="bwFooter__divider css-12f73hr">
+	
+		  <ul class="pt-4 pl-3 pr-3 pb-4 bwFooter__logos css-1gddqmt">
+			<li class="bwFooter__logo css-futkjh">
+			  <a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/3ab3dfabee442f1ab74e127d08aa507328e13de3.webp" alt="Be Gamble Aware">
+			  </a>
+			</li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/de3b9116653b83e52f317af8559db6d0f1f5a83e-min.png" alt="eCOGRA">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/aafe37128d5cc20ccd949e9297c4b6ef51c0629a-min.png" alt="mga">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/c73dc211e87156a2eb3550bc1284dfba5246a9a9&#32;(1)-min.png" alt="ibas">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/4289cdae7c82e83ffe1c7f9eb1f92c3fc10e51f0.webp" alt="IBIA">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/da0609e870b0d1528de62e2d2f381d07a4bc0b16.webp" alt="18+">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/7b7bcf4e2b027ed9b5b51cc538f5c563277d438c.webp" alt="Gamstop">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/73487f9d5d836297c457f1e660b6d515ccec6ed3.webp" alt="eCOGRA ISO">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/964daecdc036567763e40f6c16e3def0c0280d2b.webp" alt="Visa">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/c71497379f2225add084f1a3096905166c3f89b2.webp" alt="UPI">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/5843e23d22948b85ad8ac55261a45bd8668613f5.webp" alt="NetBanking">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/04e05f2976e485e4a7d88fbeea3cacac1fe3a20c.webp" alt="Bank Transfer">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="https://cdn.betwaygroup.com/medusa-production-cache/e/7/e73ad0192962c833075ca11771e0ae5b3ae37712.png" alt="Neteller">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/30bb1d879954b3e295ab8ffc52ddeb4573362930.webp" alt="Skrill">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html#" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/691b5ce0aec3c9670647f0f75a64a739bbd2a6eb.webp" alt="AstroPay Card">
+			  </a></li>
+			<li class="bwFooter__logo css-futkjh"><a href="index.html" rel="noopener noreferrer" target="_blank">
+				<img class="bwFooter__logoImage--alt css-uqqz4d" src="images/fotterimg/67910c8885b416c283278d5a0532f1e6c31c0183.webp" alt="ecoPayz">
+			  </a></li>
+		  </ul>
+		  <hr class="bwFooter__divider css-12f73hr">
+	
+		  <div class="css-1938mg0 mysocialdiv">
 
-</body>
-
-
-<!-- Mirrored from www.BaazigarBook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:31 GMT -->
+			<ul class="bwFooter__logos bwFooter__logos--social css-1gddqmt">
+			  <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
+				<a href="https://www.facebook.com/Appa-Book-104618832421178" rel="noopener noreferrer" target="_blank"><img src="images/fotterimg/fb.webp" alt="Facebook" class="css-uqqz4d">
+				</a>
+			  </li>
+			  <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
+				<a href="https://www.instagram.com/appabookofficial/" rel="noopener noreferrer" target="_blank">
+				  <img src="images/fotterimg/insta.png" alt="Instagram" class="css-uqqz4d">
+				</a>
+			  </li>
+			  <!-- <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
+				<a href="https://www.youtube.com/channel/UCIpkYBWrThKcn_biEKE_jWg" rel="noopener noreferrer" target="_blank"><img src="https://cdn.betwaygroup.com/medusa-production-cache/4/9/49d03821d260d844b6b0b8a2569d1a799f0fa9d5.png" alt="Youtube" class="css-uqqz4d">
+				</a>
+			  </li> -->
+			  <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
+				<a href="https://t.me/appabookofficial" rel="noopener noreferrer" target="_blank"><img src="images/fotterimg/tele.webp" alt="Telegram" class="css-uqqz4d">
+				</a>
+			  </li>
+			</ul>
+			<p class="bwFooter__copyright css-10uz9x4 text-white pt-4">Copyright © 2005 appabook All rights reserved.</p>
+		  </div>
+		</div>
+	  </section>
+	  <!--footer end-->
+	
+	
+	
+	  <section class="iconfooter"> 
+		  <div class="container pt-3">
+			<div class="row">
+			  <div class="col-4 text-center">
+				<div>
+				  <a href="https://t.me/appabookofficial"><img class="mypic1" src="images//telegram.png" alt="Telegram"></a>
+				  <p class="text-white">Telegram</p>
+				</div>
+			  </div>
+			  <div class="col-4 text-center">
+				<div style="align-items: center;">
+				  <a href="https://www.instagram.com/appabookofficial/"><img  class="mypic1" src="images/instagram.png" alt="Instagram"></a>
+				  <p class="text-white">Instagram</p>
+				</div>
+			  </div>
+			  <div class="col-4 text-center">
+				<div>
+				  <a href="https://api.whatsapp.com/send/?phone=917770000435&text=Hello%20I%27m%20from%20seo%20I%20need%20ID"><img  class="mypic1" src="images/whatsapp.png" alt="Whatsapp"></a>
+				  <p class="text-white">Whatsapp</p>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</section>
+	
+	
+	
+	
+	  </body>
 </html>
