--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
  
 
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>x
 	<!-- ####################################### -->
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -418,7 +418,7 @@
 	<div class="md_cs">
 		<div class="main">
 			<div class="md_cs_inn">
-				<div class="md_cs_lft">
+				<div class="md_cs_lft" style="margin: auto;">
 					<h2>Customer Support</h2>
 					<p>Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or
 						Complaints. We Are Here To Help You 24/7 With Our Online Services.</p>
