--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 	<script type="text/javascript" src="js/owl.js"></script>
 	<script type="text/javascript" src="js/at-jquery.js"></script>
 	<meta name="google-site-verification" content="6JZPJ3ZuHrMGK0qo2s9O6_CGz1FCbEtZbftc9KwUve0" />
+
+	<!-- Remember to include jQuery :) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+<!-- jQuery Modal -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+
+
 	<!-- Google Tag Manager -->
 	<script type="text/javascript" src="js/scripts.js"></script>
 	<!-- End Google Tag Manager -->
@@ -194,11 +203,48 @@
 
 </style>
 
+<!-- Remember to include jQuery :) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+<!-- jQuery Modal -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
+
+<style>
+	#ex1{
+		z-index: 999999999;
+		height:50%;
+		margin:15% 35%;
+
+	}
+
+	
+
+</style>
+
+
+
+<script>
+	$(document).ready(function(){
+		$("#ex1").modal('show');
+	});
+
+	/*	$("#bandh").click(function(){
+			$("#ex1").modal('hide');
+		  }); */
+
+	  function bandhh() {
+			$("#ex1").modal('hide');
+	  }
+
+</script>
 
 </head>
 
 <body>
-
+	
+	
 	<!-- #######TEST########### -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
@@ -206,6 +252,14 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
 	
+	<!-- Modal HTML embedded directly into document -->
+<div id="ex1" class="modal">
+	<p>Thanks for clicking. That felt good. This was for testing purpose</p>
+	<a id="bandh" onclick="bandhh()" href="#" rel="modal:close">Close</a>
+  </div>
+  
+  <!-- Link to open the modal -->
+  <!-- <p><a href="#ex1" rel="modal:open">Open Modal</a></p> -->
 	
 	<div id="navuslider" class="container" style="background-color:black; position: relative; z-index: 9999; ">
 	 
