--- a/index.html
+++ b/index.html
@@ -212,11 +212,35 @@
 <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 
 <style>
+
 	#ex1{
 		z-index: 999999999;
 		height:50%;
 		margin:15% 35%;
+	}
 
+	@media screen and (max-width:1100px) {
+		#ex1{
+			z-index: 999999999;
+			height:50%;
+			margin:15% 25%;
+		}
+	}
+
+	@media screen and (max-width:768px) {
+		#ex1{
+			z-index: 999999999;
+			height:50%;
+			margin:15% 16%;
+		}
+	}
+
+	@media screen and (max-width:450px) {
+		#ex1{
+			z-index: 999999999;
+			height:50%;
+			margin:15% 5%;
+		}
 	}
 
 	
