logo added in modal

--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
 	
 	<!-- Modal HTML embedded directly into document -->
 <div id="ex1" class="modal">
+	<img width="20%" style="margin-left:36%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
 	<p>Thanks for clicking. That felt good. This was for testing purpose</p>
-	<a id="bandh" onclick="bandhh()" href="#" rel="modal:close">Close</a>
+	<a id="bandh" onclick="bandhh()" href="#" rel="modal:close">Cancel</a>
   </div>
   
   <!-- Link to open the modal -->
