changes done abhi inside the modal

--- a/index.html
+++ b/index.html
@@ -278,9 +278,21 @@
 	
 	<!-- Modal HTML embedded directly into document -->
 <div id="ex1" class="modal">
-	<img width="20%" style="margin-left:36%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
-	<p>Thanks for clicking. That felt good. This was for testing purpose</p>
-	<a id="bandh" onclick="bandhh()" href="#" rel="modal:close">Cancel</a>
+	<img width="20%" style="margin-left:36%; margin-bottom:2%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
+	<p style="font-weight: 600; font-size:90%;">Welcome to BAAZIGAR ONLINE BOOK<br/>
+Now that you’re here, want to  get your hands dirty with some free 100  coins <br/>
+
+Khelo aur jeetho FREE COIN KE SATH<br/></p>
+		<hr/>
+		<p style="font-weight: 600; font-size:90%; margin-bottom:5%;">
+			बाजीगर ऑनलाइन बुक में आपका स्वागत है<br/>
+अब जब आप यहां हैं, तो कुछ मुफ्त 100 सिक्कों से अपने हाथ गंदे करना चाहते हैं<br/>
+
+खेलो और जीतो फ्री कॉइन के साथs
+			<br/></p>
+
+
+	<a id="bandh" style="color: red;" onclick="bandhh()" href="#" rel="modal:close">Close</a>
   </div>
   
   <!-- Link to open the modal -->
