your data updated abhi

--- a/index.html
+++ b/index.html
@@ -277,18 +277,16 @@
 
 	
 	<!-- Modal HTML embedded directly into document -->
-<div id="ex1" class="modal">
+<div id="ex1" class="modal" style="background-color:gainsboro;">
 	<img width="20%" style="margin-left:36%; margin-bottom:2%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
-	<p style="font-weight: 600; font-size:90%;">Welcome to BAAZIGAR ONLINE BOOK<br/>
-Now that you’re here, want to  get your hands dirty with some free 100  coins <br/>
+	<p style="font-weight: 600; font-size:90%;">Welcome to Baazigar Online Book...<br/>
+Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs..<br/>
 
-Khelo aur jeetho FREE COIN KE SATH<br/></p>
-		<hr/>
+</p>
+		<hr style="border-top: 2px solid #9b9b9b;" />
 		<p style="font-weight: 600; font-size:90%; margin-bottom:5%;">
-			बाजीगर ऑनलाइन बुक में आपका स्वागत है<br/>
-अब जब आप यहां हैं, तो कुछ मुफ्त 100 सिक्कों से अपने हाथ गंदे करना चाहते हैं<br/>
-
-खेलो और जीतो फ्री कॉइन के साथs
+			बाजीगर ऑनलाइन बुक में आपका स्वागत है...<br/>
+अब जब आप यहां हैं, तो एक मुफ्त खाते और 100 रुपये के साइन_अप बोनस के साथ अपनी किस्मत आजमाएं।
 			<br/></p>
 
 
