--- a/index.html
+++ b/index.html
@@ -217,7 +217,16 @@
 		z-index: 999999999;
 		height:50%;
 		margin:15% 35%;
+		background: #28292d;
 	}
+
+	p.modalpop{
+		background: -webkit-linear-gradient(top, #8f6B29, #FDE08D, #DF9F28);
+	background: linear-gradient(top, #8f6B29, #FDE08D, #DF9F28);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	}
+	
 
 	@media screen and (max-width:1100px) {
 		#ex1{
@@ -232,13 +241,15 @@
 			z-index: 999999999;
 			height:50%;
 			margin:15% 16%;
+
 		}
+
 	}
 
 	@media screen and (max-width:450px) {
 		#ex1{
 			z-index: 999999999;
-			height:50%;
+			height:60%;
 			margin:15% 5%;
 		}
 	}
@@ -277,14 +288,14 @@
 
 	
 	<!-- Modal HTML embedded directly into document -->
-<div id="ex1" class="modal" style="background-color:gainsboro;">
-	<img width="20%" style="margin-left:36%; margin-bottom:2%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
-	<p style="font-weight: 600; font-size:90%;">Welcome to Baazigar Online Book...<br/>
+<div id="ex1" class="modal" >
+	<img width="24%" style="margin-left:36%; margin-bottom:2%;" class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
+	<p class="modalpop" style="font-weight: 600; font-size:100%;">Welcome to Baazigar Online Book...<br/>
 Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs..<br/>
 
 </p>
 		<hr style="border-top: 2px solid #9b9b9b;" />
-		<p style="font-weight: 600; font-size:90%; margin-bottom:5%;">
+		<p class="modalpop" style="font-weight: 600; font-size:100%; margin-bottom:5%;">
 			बाजीगर ऑनलाइन बुक में आपका स्वागत है...<br/>
 अब जब आप यहां हैं, तो एक मुफ्त खाते और 100 रुपये के साइन_अप बोनस के साथ अपनी किस्मत आजमाएं।
 			<br/></p>
