insta and tele links updated

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs
 			<div class="md_header_inn">
 				<div class="md_hdr_lft">
 					<span>For Any Queries Instagram Us On</span>
-					<a class="a_cfw" href="">Click for Instagram</a>
+					<a class="a_cfw" href="https://instagram.com/officialbaazigaronlineworld?igshid=YmMyMTA2M2Y=">Click for Instagram</a>
 				</div>
 				<div class="md_hdr_ctr">
 					<a href="index.html">
@@ -609,7 +609,7 @@ Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs
 	<div class="md_insta">
 		<div class="main">
 			<!-- <img style="width:20%; position:relative; left:40%;" src="./images/bb.gif" /> -->
-			<h2>Instagram <a href="https://www.instagram.com/BaazigarBookofficial/" target="_blank"><img
+			<h2>Instagram <a href="https://instagram.com/officialbaazigaronlineworld?igshid=YmMyMTA2M2Y=" target="_blank"><img
 						src="images/insta.webp" alt="" />Follow</a></h2>
 			<div class="md_insta_dv">
 				<div class="md_insta_pic">
@@ -898,7 +898,7 @@ Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs
 				</a>
 			  </li>
 			  <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
-				<a href="https://www.instagram.com/appabookofficial/" rel="noopener noreferrer" target="_blank">
+				<a href="https://instagram.com/officialbaazigaronlineworld?igshid=YmMyMTA2M2Y=" rel="noopener noreferrer" target="_blank">
 				  <img src="images/fotterimg/insta.png" alt="Instagram" class="css-uqqz4d">
 				</a>
 			  </li>
@@ -907,7 +907,7 @@ Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs
 				</a>
 			  </li> -->
 			  <li class="bwFooter__logo bwFooter__logo--social css-futkjh">
-				<a href="https://t.me/appabookofficial" rel="noopener noreferrer" target="_blank"><img src="images/fotterimg/tele.webp" alt="Telegram" class="css-uqqz4d">
+				<a href="https://t.me/bob12364" rel="noopener noreferrer" target="_blank"><img src="images/fotterimg/tele.webp" alt="Telegram" class="css-uqqz4d">
 				</a>
 			  </li>
 			</ul>
@@ -924,13 +924,13 @@ Now that you're here, Try your luck with a Free Account & Sign_Up Bonus of 100Rs
 			<div class="row">
 			  <div class="col-4 text-center">
 				<div>
-				  <a href="https://t.me/appabookofficial"><img class="mypic1" src="images//telegram.png" alt="Telegram"></a>
+				  <a href="https://t.me/bob12364"><img class="mypic1" src="images//telegram.png" alt="Telegram"></a>
 				  <p class="text-white">Telegram</p>
 				</div>
 			  </div>
 			  <div class="col-4 text-center">
 				<div style="align-items: center;">
-				  <a href="https://www.instagram.com/appabookofficial/"><img  class="mypic1" src="images/instagram.png" alt="Instagram"></a>
+				  <a href="https://instagram.com/officialbaazigaronlineworld?igshid=YmMyMTA2M2Y="><img  class="mypic1" src="images/instagram.png" alt="Instagram"></a>
 				  <p class="text-white">Instagram</p>
 				</div>
 			  </div>
